fixing spacing issue

--- a/components/sass/modules/_main-content.scss
+++ b/components/sass/modules/_main-content.scss
@@ -79,6 +79,12 @@
     .logo {
         margin-bottom: 2rem;
     }
+    .fields__field{
+        margin-bottom: 1.5rem;
+        &:last-child{
+            margin-bottom: 0;
+        }
+    }
 }
 
 .page-title {
